--- a/Lab1/part10.html
+++ b/Lab1/part10.html
@@ -26,5 +26,110 @@
     svg.append("g")
        .call(x_axis);
 </script>
+
+<script>
+    //exercise 20
+    const width1 = 400;
+    const height1 = 300;
+    var data1 = [10, 15, 20, 25, 30];
+
+    var svg = d3.select("body")
+                .append("svg")
+                .attr("width", width1)
+                .attr("height", height1);
+
+    var xscale = d3.scaleLinear()
+                    .domain([0, d3.max(data1)])
+                    .range([0, width1 - 100]);
+    var yscale = d3.scaleLinear()
+                    .domain([0, d3.max(data1)])
+                    .range([height1/2, 0]);
+
+    var x_axis = d3.axisBottom()
+                    .scale(xscale);
+    var xTop_axis = d3.axisTop()
+                    .scale(xscale);
+    var y_axis = d3.axisLeft()
+                    .scale(yscale);
+    var yRight_axis = d3.axisRight()
+                    .scale(yscale);
+
+    svg.append("g")
+        .attr("transform", "translate(50, 20)")
+        .call(y_axis);
+    svg.append("g")
+        .attr("transform", "translate(" + (width1 - 50) + ", 20)")
+        .style("color", "blue")
+        .call(yRight_axis);
+
+    var xAxisTranslate = height1/2 + 20;
+    svg.append("g")
+        .attr("transform", "translate(50, " + xAxisTranslate +")")
+        .call(x_axis)
+    var xTopAxisTranslate = 20;
+    svg.append("g")
+        .attr("transform", "translate(50, " + xTopAxisTranslate +")")
+        .style("color", "blue")
+        .call(xTop_axis)
+</script>
+
+<script>
+    //exercise 21
+    let heartfailurecsv = 'https://raw.githubusercontent.com/akmand/datasets/master/heart_failure.csv';
+
+    var result = [0, 0, 0, 0]
+    var ticks = ["1-30", "31-40","41-60", "61-100"]
+
+    d3.csv(heartfailurecsv).then(function(data) {
+        for (let i = 0; i < data.length; i++) {
+            if (1 <= data[i].age && data[i].age <= 30) {
+                result[3]++;
+            } else if (31 <= data[i].age && data[i].age <= 40) {
+                result[2]++;
+            } else if (41 <= data[i].age && data[i].age <= 60) {
+                result[1]++;
+            } else if (61 <= data[i].age && data[i].age <= 100) {
+                result[0]++;
+            }
+        }
+    }).then(function (){
+        const width = 600;
+        const height = 400;
+
+        var svg = d3.select("body")
+                    .append("svg")
+                    .attr("width", width)
+                    .attr("height", height);
+
+        var xscale = d3.scaleLinear()
+                        .domain([0, d3.max(result)+10])
+                        .range([0, width - 100]);
+        var yscale = d3.scaleBand()
+                        .domain([1,2,3,4])
+                        .range([height/2,0]);
+
+        var x_axis = d3.axisBottom()
+                        .scale(xscale);
+        var y_axis = d3.axisLeft()
+                        .scale(yscale);
+
+        svg.append("g")
+            .attr("transform", "translate(50, 10)")
+            .call(y_axis.tickFormat(function(d, i) { return ticks[i];}));
+        var xAxisTranslate = height / 2 + 10;
+        svg.append("g")
+            .attr("transform", "translate(50, " + xAxisTranslate +")")
+            .call(x_axis)
+
+        var tempSvg = svg.selectAll("rect")
+            .data(result)
+            .enter()
+            .append("rect")
+            .attr("x", 50)
+            .attr("y", function (d, i) { return i * 50 + 25})
+            .attr("width", function (d) { return xscale(d)})
+            .attr("height", 20);
+    });
+</script>
 </body>
 </html>
