--- a/Lab1/part3.html
+++ b/Lab1/part3.html
@@ -12,17 +12,16 @@
 <script>
     let nums = [10, 50, 200];
     let paragraph = d3.select("body")
-                        .selectAll("div")
-                        .data(nums)
-                        .text(function (d, i) {
+                      .selectAll("div")
+                      .data(nums)
+                      .text(function (d, i) {
                             console.log("d: " + d);
                             console.log("i: " + i);
                             console.log("this: " + this);
                             return 'cont:' + d; // return value is used to set the 'text'
-                        });
+                      });
 </script>
 
-<script src='https://d3js.org/d3.v7.min.js'></script>
 <div></div>
 <div></div>
 <div></div>
@@ -32,16 +31,16 @@
                       {name:'other', val:2, color:"green"},
                       {name:'b', val:3, color:"black"} ];
     let paragraph1 = d3.select("body")
-                        .selectAll("div")
-                        .data(otherdata)
-                        .text(function (d, i) {
+                       .selectAll("div")
+                       .data(otherdata) // this method returns an iterator
+                       .text(function (d, i) { // d is the values in the array, i is the index
                             console.log("d.name: " + d.name);
                             console.log("d.val: " + d.val);
                             console.log("d.color: " + d.color);
                             console.log("i: " + i);
                             console.log("this: " + this);
                             return 'cont:' + d.name; // return value is used to set the 'text'
-                        });
+                       });
 </script>
 
 <div></div>
@@ -52,19 +51,18 @@
     //exercise 7
     let num = [10, 50, 100, 200];
     let paragraph2 = d3.select("body")
-                        .selectAll("div")
-                        .data(num)
-                        .text(function (d, i) {
+                       .selectAll("div")
+                       .data(num)
+                       .text(function (d, i) {
                             return 'cont:' + d; // return value is used to set the 'text'
-                        })
-                        .style("color", function(d, i) {
+                       })
+                       .style("color", function(d, i) {
                             if (50 <= d && d <= 100 ) {
                                 return "red";
                             } else {
                                 return "yellow";
                             }
-                            return 'blue';
-                        });
+                       });
 </script>
 </body>
 </html>
