--- a/Lab1/part5.html
+++ b/Lab1/part5.html
@@ -7,20 +7,19 @@
 <body>
 <script src='https://d3js.org/d3.v7.min.js'></script>
 <script>
-    //exercise 9
     let titaniccsv = 'https://raw.githubusercontent.com/dsindy/kaggle-titanic/master/data/test.csv';
     /*
-    PassengerId,Pclass,Name,Sex,Age,SibSp,Parch,Ticket,Fare,Cabin,Embarked
-    892,3,"Kelly, Mr. James",male,34.5,0,0,330911,7.8292,,Q
-    893,3,"Wilkes, Mrs. James (Ellen Needs)",female,47,1,0,363272,7,,S
-    894,2,"Myles, Mr. Thomas Francis",male,62,0,0,240276,9.6875,,Q
-    895,3,"Wirz, Mr. Albert",male,27,0,0,315154,8.6625,,S
+        PassengerId,Pclass,Name,Sex,Age,SibSp,Parch,Ticket,Fare,Cabin,Embarked
+        892,3,"Kelly, Mr. James",male,34.5,0,0,330911,7.8292,,Q
+        893,3,"Wilkes, Mrs. James (Ellen Needs)",female,47,1,0,363272,7,,S
+        894,2,"Myles, Mr. Thomas Francis",male,62,0,0,240276,9.6875,,Q
+        895,3,"Wirz, Mr. Albert",male,27,0,0,315154,8.6625,,S
     */
     var countMale = 0;
     var countFemale = 0;
     var countMr = 0;
     var countMrs = 0;
-    //csv loading is async so make sure to run your chart code within the csv function.
+
     // d3.csv(titaniccsv, function(data) {
     //     if (data.Sex === "male"){
     //         countMale++;
@@ -33,9 +32,15 @@
     //         countMrs++;
     //     }
     // });
-    // due to loading is async, we have to use promise here, that is each task must wait for previous task has done
+
+    /*
+        csv loading is async so make sure to run your chart code within the csv function.
+        this is called Promise, Promises are used to handle asynchronous operations in JavaScript.
+        then() function will return a new Promise object, and a latter then() function must wait previous then() task is done
+        catch() function will catch any exceptions happened in Promise
+     */
     d3.csv(titaniccsv).then(function(data) {
-        console.log(data.length)
+        // exercise 9
         for (let i = 0; i < data.length; i++) {
             if (data[i].Sex === "male"){
                 countMale = countMale + 1;
@@ -43,6 +48,7 @@
                 countFemale = countFemale + 1;
             }
             // have to use \ convert . to string meaning
+            // using regular expression here, the expression has to be wrapped with /.../
             if (data[i].Name.toString().search(/Mr\./) !== -1){
                 countMr++;
             }else if (data[i].Name.toString().search(/Mrs\./) !== -1){
@@ -58,12 +64,11 @@
 </script>
 
 <script>
-    // exercise 10
     let heartfailurecsv = 'https://raw.githubusercontent.com/akmand/datasets/master/heart_failure.csv';
     /*
-    age,anaemia,creatinine_phosphokinase,diabetes,ejection_fraction,high_blood_pressure,platelets,serum_creatini ne,serum_sodium,sex,smoking,time,DEATH_EVENT
-    75,0,582,0,20,1,265000,1.9,130,1,0,4,1 55,0,7861,0,38,0,263358.03,1.1,136,1,0,6,1
-    65,0,146,0,20,0,162000,1.3,129,1,1,7,1 50,1,111,0,20,0,210000,1.9,137,1,0,7,1
+        age,anaemia,creatinine_phosphokinase,diabetes,ejection_fraction,high_blood_pressure,platelets,serum_creatini ne,serum_sodium,sex,smoking,time,DEATH_EVENT
+        75,0,582,0,20,1,265000,1.9,130,1,0,4,1 55,0,7861,0,38,0,263358.03,1.1,136,1,0,6,1
+        65,0,146,0,20,0,162000,1.3,129,1,1,7,1 50,1,111,0,20,0,210000,1.9,137,1,0,7,1
     */
     var result = [0, 0, 0, 0]
 
@@ -80,6 +85,7 @@
             }
         }
     }).then(function (){
+        // exercise 10
         var p = d3.select("body")
                     .selectAll("p")
                     .data(result)
