--- a/Lab1/part12.html
+++ b/Lab1/part12.html
@@ -19,10 +19,10 @@
         // Get the 'limits' of the data - the full extent (mins and max)
         // so the plotted data fits perfectly
         const xExtent = d3.extent(data, d => {
-            return d.x
+            return d.x;
         });
         const yExtent = d3.extent(data, d => {
-            return d.y
+            return d.y;
         });
 
         // Append SVG Object to the Page const
@@ -78,6 +78,7 @@
     let heartfailurecsv = 'https://raw.githubusercontent.com/akmand/datasets/master/heart_failure.csv';
     d3.csv(heartfailurecsv).then(function(data) {
         for (let i = 0; i < data.length; i++) {
+            // here I used age value as input data
             this.data.push({x : i, y : data[i].age});
         }
     }).then(function (){
@@ -88,28 +89,25 @@
 <script>
     //exercise 24
     function drawChart(data1, data2) {
-        // Set Dimensions
         const xSize = 600;
         const ySize = 600;
         const margin = 40;
         const xMax = xSize - margin * 2;
         const yMax = ySize - margin * 2;
 
-        // Get the 'limits' of the data - the full extent (mins and max)
-        // so the plotted data fits perfectly
         const xExtent1 = d3.extent(data1, d => {
-            return d.x
+            return d.x;
         });
         const yExtent1 = d3.extent(data1, d => {
-            return d.y
+            return d.y;
         });
         const xExtent2 = d3.extent(data2, d => {
-            return d.x
+            return d.x;
         });
         const yExtent2 = d3.extent(data2, d => {
-            return d.y
+            return d.y;
         });
-        // Append SVG Object to the Page const
+
         svg = d3.select("body")
             .append("svg")
             .attr('width', xSize)
@@ -117,34 +115,33 @@
             .append("g")
             .attr("transform", "translate(" + margin + "," + margin + ")");
 
+        // select the max and min value in x and y from both input data arrays
         const xExtent = [Math.min(xExtent1[0], xExtent2[0]), Math.max(xExtent1[1], xExtent2[1])];
         const yExtent = [Math.min(yExtent1[0], yExtent2[0]), Math.max(yExtent1[1], yExtent2[1])];
 
-        // X Axis
         const x = d3.scaleLinear()
             .domain([xExtent[0], xExtent[1]])
             .range([0, xMax]);
-        // bottom
+
         svg.append("g")
             .attr("transform", "translate(0," + yMax + ")")
             .call(d3.axisBottom(x))
             .attr('color', 'green');
-        // make bottom axis green
-        // top
+
         svg.append("g")
             .call(d3.axisTop(x));
-        // Y Axis
+
         const y = d3.scaleLinear()
             .domain([yExtent[0], yExtent[1]])
             .range([yMax, 0]);
-        // left y axis
+
         svg.append("g")
             .call(d3.axisLeft(y));
-        // right y axis
+
         svg.append("g")
             .attr("transform", `translate(${yMax},0)`)
             .call(d3.axisRight(y));
-        // Add the line
+
         if (data1.length !== 0) {
             svg.append("path")
                 .datum(data1)
@@ -153,6 +150,7 @@
                 .attr("stroke-width", 1.5)
                 .attr("d", d3.line()
                     .x(function (d) {
+                        // the input data is a tuple, in a tuple, first is index, second is the input value.
                         return x(d.x);
                     })
                     .y(function (d) {
@@ -181,9 +179,12 @@
     //let heartfailurecsv = 'https://raw.githubusercontent.com/akmand/datasets/master/heart_failure.csv';
     d3.csv(heartfailurecsv).then(function(data) {
         for (let i = 0; i < data.length; i++) {
+            // used age data again
             this.data2.push({x : i, y : data[i].age});
         }
+        // generate same number of point as rows in csv file
         for (let i = 0; i < data.length; i++) {
+            // used atan function
             this.data1.push({x: i , y: Math.atan(6.2 * i / 100)});
         }
     }).then(function (){
