--- a/Lab1/part14.html
+++ b/Lab1/part14.html
@@ -52,6 +52,7 @@
                     return "translate(0," + i * barHeight + ")";
                 });
             //exercise 28
+            // create a color scale that has same domain with input value
             var myColor5 = d3.scaleSequential()
                              .domain([d3.min(result), d3.max(result)])
                              .interpolator(d3.interpolatePuRd);
@@ -60,6 +61,7 @@
                     return scale(d);
                 })
                 .attr('fill', function (d){
+                    // fill with corresponding color in the color scale
                     return myColor5(d);
                 })
                 .attr("height", barHeight - margin)
@@ -76,15 +78,12 @@
 
 <script>
     function drawChartOriginal(data) {
-        // Set Dimensions
         const xSize = 600;
         const ySize = 600;
         const margin = 40;
         const xMax = xSize - margin * 2;
         const yMax = ySize - margin * 2;
 
-        // Get the 'limits' of the data - the full extent (mins and max)
-        // so the plotted data fits perfectly
         const xExtent = d3.extent(data, d => {
             return d.x
         });
@@ -92,7 +91,6 @@
             return d.y
         });
 
-        // Append SVG Object to the Page const
         svg = d3.select("body")
             .append("svg")
             .attr('width', xSize)
@@ -100,31 +98,29 @@
             .append("g")
             .attr("transform", "translate(" + margin + "," + margin + ")");
 
-        // X Axis
         const x = d3.scaleLinear()
             .domain([xExtent[0], xExtent[1]])
             .range([0, xMax]);
-        // bottom
+
         svg.append("g")
             .attr("transform", "translate(0," + yMax + ")")
             .call(d3.axisBottom(x))
             .attr('color', 'green');
-        // make bottom axis green
-        // top
+
         svg.append("g")
             .call(d3.axisTop(x));
-        // Y Axis
+
         const y = d3.scaleLinear()
             .domain([yExtent[0], yExtent[1]])
             .range([yMax, 0]);
-        // left y axis
+
         svg.append("g")
             .call(d3.axisLeft(y));
-        // right y axis
+
         svg.append("g")
             .attr("transform", `translate(${yMax},0)`)
             .call(d3.axisRight(y));
-        // Add the line
+
         svg.append("path")
             .datum(data)
             .attr("fill", "none")
@@ -137,7 +133,8 @@
                 .y(function (d) {
                     return y(d.y);
                 }));
-        //exercise 29
+        // exercise 29
+        // use another way to express domain
         var myColor2 = d3.scaleSequential()
                          .domain([yExtent[0], yExtent[1]])
                          .interpolator(d3.interpolateViridis);
@@ -153,6 +150,7 @@
             })
             .attr("r", 5)
             .style("fill", function (d) {
+                // due to input data is a tuple, so has to use d.y here rather than d
                 return myColor2(d.y);
             });
     }
