--- a/Lab1/part13.html
+++ b/Lab1/part13.html
@@ -170,7 +170,7 @@
             .attr("r", 5)
             .style("fill", "red")
         //exercise 27
-        svg.selectAll("text")
+        svg.selectAll("dot")
             .data(data1) // add data first
             .enter()
             .append("text")
