--- a/Lab1/part4.html
+++ b/Lab1/part4.html
@@ -30,6 +30,8 @@
                         return "green";
                     } else if (typeof d === typeof 'a') {
                         return "blue";
+                    } else {
+                        return "red";
                     }
                 })
                 .text(function (d) {
