--- a/Lab1/part9.html
+++ b/Lab1/part9.html
@@ -36,7 +36,7 @@
                     result[3]++;
                 }
             }
-        }).then(function (){
+        }).then(function (){9
             var scale = d3.scaleLinear()
                 .domain([d3.min(result), d3.max(result)])
                 .range([50, 500]);
