--- a/Lab1/part14.html
+++ b/Lab1/part14.html
@@ -26,6 +26,7 @@
 
         d3.csv(heartfailurecsv).then(function(data) {
             for (let i = 0; i < data.length; i++) {
+                // filter
                 if (1 <= data[i].age && data[i].age <= 30) {
                     result[0]++;
                 } else if (31 <= data[i].age && data[i].age <= 40) {
@@ -69,7 +70,7 @@
                 .attr("x", function (d) { return (scale(d)); })
                 .attr("y", barHeight / 2)
                 .attr("dy", ".35em")
-                .style('text-anchor', 'end')
+                .style('text-anchor', 'end') // in css
                 .text(function (d) { return d; });
         });
     }
