--- a/Lab1/part15.html
+++ b/Lab1/part15.html
@@ -17,42 +17,43 @@
         3: {data: 10, index: 0, value: 10, startAngle: 0, endAngle: 2.617993877991494, …}
      */
 </script>
-<!--<script>-->
-<!--    //exercise 30-->
-<!--    var data = [3, 4, 8, 12, 9, 11, 19, 1, 5, 10, 25, 2, 9, 23, 17, 13];-->
-<!--    const xSize = 400;-->
-<!--    const ySize = 400;-->
-<!--    const margin = 40;-->
-<!--    const xMax = xSize - margin*2;-->
-<!--    const yMax = ySize - margin*2;-->
-<!--    // Append SVG Object to the Page-->
-<!--    const svg = d3.select("body")-->
-<!--                .append("svg")-->
-<!--                .attr('width', xSize )-->
-<!--                .attr('height', ySize )-->
-<!--                .append("g")-->
-<!--                .attr("transform","translate(" + xSize/2 + "," + ySize/2 + ")");-->
-<!--    const radius = Math.min(xSize, ySize) / 2;-->
-<!--    var color = d3.scaleOrdinal(['#4daf4a','#377eb8','#ff7f00','#984ea3','#e41a1c']);-->
-<!--    // Generate the pie-->
-<!--    var pie = d3.pie();-->
-<!--    // Generate the arcs-->
-<!--    var arc = d3.arc()-->
-<!--        .innerRadius(0)-->
-<!--        .outerRadius(radius);-->
-<!--    //Generate groups-->
-<!--    var arcs = svg.selectAll("arc")-->
-<!--        .data(pie(data))-->
-<!--        .enter()-->
-<!--        .append("g")-->
-<!--        .attr("class", "arc");-->
-<!--    //Draw arc paths-->
-<!--    arcs.append("path")-->
-<!--        .attr("fill", function(d, i) {-->
-<!--            return color(i);-->
-<!--        })-->
-<!--        .attr("d", arc);-->
-<!--</script>-->
+<script>
+    //exercise 30
+    var data = [3, 4, 8, 12, 9, 11, 19, 1, 5, 10, 25, 2, 9, 23, 17, 13];
+    const xSize = 400;
+    const ySize = 400;
+    const margin = 40;
+    const xMax = xSize - margin*2;
+    const yMax = ySize - margin*2;
+    // Append SVG Object to the Page
+    const svg = d3.select("body")
+                .append("svg")
+                .attr('width', xSize )
+                .attr('height', ySize )
+                .append("g")
+                .attr("transform","translate(" + xSize/2 + "," + ySize/2 + ")");
+    const radius = Math.min(xSize, ySize) / 2;
+    var color = d3.scaleOrdinal(['#4daf4a','#377eb8','#ff7f00','#984ea3','#e41a1c']);
+    // Generate the pie
+    var pie = d3.pie();
+    // Generate the arcs
+    var arc = d3.arc()
+        .innerRadius(0)
+        .outerRadius(radius);
+    //Generate groups
+    var arcs = svg.selectAll("arc")
+        .data(pie(data))
+        .enter()
+        .append("g")
+        .attr("class", "arc");
+    //Draw arc paths
+    arcs.append("path")
+        .attr("fill", function(d, i) {
+            return color(i);
+        })
+        .attr("d", arc);
+</script>
+
 <script>
     var data = [3, 4, 8, 12, 9, 11, 19, 1, 5, 10, 25, 2, 9, 23, 17, 13];
     const xSize = 400;
